scss大部分用法的使用,替换之前的page的写法

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,8 +1,7 @@
 @import './utils/margin.scss';
 @import './utils/tab.scss';
 @import './page/page.scss';
+@import './utils/padding.scss';
 
-.note {
-  color: #ac5715;
-}
+
 
