--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,8 +1,1 @@
-$fontEmphasize: rgb(255, 0, 0);
-$codeBackColor: #f8f8f8;
-$codeColor: #000;
-$codeTextIndent: 1em;
-$titleColor: #000000;
-
-$summaryColor: #afafaf;
-$summaryBackColor: #ffffff;
+@import './variable/page.scss';
