--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -14,11 +14,13 @@
   .code {
     background-color: getPageValue('code', 'backColor');
     @include paddingSet(10px);
+    @include marginSet(10px 0 0 0);
     color: getPageValue('code', 'color');
     border-radius: 15px;
     text-align: left;
     text-indent: getPageValue('code', 'textIndent');
     border: 1px solid #f8f8f8;
+    @include overflow('x');
     .code_font {
       font-weight: bolder;
       font-size: 16px;
