增加tree-list组件已经学习新的相关正则内容

--- a/src/assets/scss/variable/page.scss
+++ b/src/assets/scss/variable/page.scss
@@ -2,7 +2,8 @@ $page: (
   utils: (
     titleColor: #000000,
     fontEmphasize: rgb(255, 0, 0),
-    noteColor: #ac5715
+    noteColor: #ac5715,
+    hrefColor: #3eaf7c,
   ),
   code: (
     backColor: #f8f8f8,
