--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -62,4 +62,10 @@
       width: 100%;
     }
   }
+
+  a {
+    color: getPageValue('utils', 'hrefColor');
+    font-weight: 500;
+    text-decoration: none;
+  }
 }
