站点头部创建完成

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -4,7 +4,17 @@
 
 @import './page/page.scss';
 @import './structure/toolbar.scss';
+@import './structure/header.scss';
 
 a {
   text-decoration: none;
+}
+
+body {
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: -apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
+    font-weight: 700;
 }
