首页书写完成

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,6 +5,7 @@
 @import './page/page.scss';
 @import './structure/toolbar.scss';
 @import './structure/header.scss';
+@import './structure/body.scss';
 
 a {
   text-decoration: none;
