--- a/src/assets/scss/variable/body.scss
+++ b/src/assets/scss/variable/body.scss
@@ -2,6 +2,9 @@ $body: (
   fileing: (
     tagColor: #67c23a,
     pageListHover: #0085a1,
+    tagCloudBackColor: #409EFF,
+    tagCloudHoverColor: #67c23a,
+    
   ),
   pageList: (
     color: #000000,
