--- a/src/assets/scss/structure/header.scss
+++ b/src/assets/scss/structure/header.scss
@@ -4,6 +4,7 @@
   background-color: getStructureValue('header', 'backColor');
 
   .subTitle {
+    @include paddingSet(0 10px);
     @include subTitle(18px);
   }
 
