文章跳转组件完成

--- a/src/assets/scss/structure/paging.scss
+++ b/src/assets/scss/structure/paging.scss
@@ -81,7 +81,13 @@
         li {
           display: inline-block;
           margin: 0 7px;
-          cursor: pointer;
+          a {
+            cursor: pointer;
+          }
+          .active {
+            color: getBodyValue('paging', 'hoverColor');
+            font-weight: bolder;
+          }
         }
       }
       .next {
