--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -49,7 +49,7 @@
     @include marginSet(0 10px 0 10px);
     span {
       @include paddingSet(0 0 0 10px);
-    }
+    } 
 
     .code {
       background-color: getPageValue('code', 'backColor');
@@ -68,5 +68,24 @@
     color: getPageValue('utils', 'hrefColor');
     font-weight: 500;
     text-decoration: none;
+  }
+
+  .list_label {
+    list-style-type: decimal;
+    font-weight: 800;
+    font-size: 16px;
+    li {
+      margin-top: 10px;
+    }
+    .label_title {
+      text-indent: 0;
+    }
+    .label_body{
+      font-weight: normal;
+      font-size: 14px;
+      p{
+        text-indent: 0px;
+      }
+    }
   }
 }
