--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -25,17 +25,17 @@
     .code_font {
       font-weight: bolder;
       font-size: 16px;
+      // text-indent: 5px;
     }
     .note {
       color: getPageValue('utils', 'noteColor');
+      // text-indent: 5px;
     }
   }
 
   .paragraph {
     text-align: left;
-    p {
-      text-indent: 30px;
-    }
+
   }
 
   .summary {
