--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -74,6 +74,7 @@
     list-style-type: decimal;
     font-weight: 800;
     font-size: 16px;
+    text-align: left;
     li {
       margin-top: 10px;
     }
