table组件开发即将完成

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,7 @@
 @import './utils/margin.scss';
 @import './utils/tab.scss';
 @import './utils/padding.scss';
+@import './utils/table.scss';
 
 @import './page/page.scss';
 @import './structure/toolbar.scss';
