--- a/src/components/utils/table/table-body.scss
+++ b/src/components/utils/table/table-body.scss
@@ -6,6 +6,10 @@
   padding: 12px 5px;
   font-size: 15px;
   text-overflow: ellipsis;
+  -moz-user-select: none; /*火狐*/ /*选中文字时避免出现蓝色背景*/
+  -webkit-user-select: none; /*webkit浏览器*/ /*选中文字时避免出现蓝色背景*/
+  -ms-user-select: none; /*IE10*/ /*选中文字时避免出现蓝色背景*/
+  user-select: none; /*选中文字时避免出现蓝色背景*/
 }
 tbody {
   vertical-align: middle;
