--- a/src/components/utils/table/table-header.scss
+++ b/src/components/utils/table/table-header.scss
@@ -5,6 +5,10 @@ tr {
   position: relative;
   @include paddingSet(12px 5px);
   border-right: 1px solid #ebeef5;
+  -moz-user-select: none; /*火狐*/ /*选中文字时避免出现蓝色背景*/
+  -webkit-user-select: none; /*webkit浏览器*/ /*选中文字时避免出现蓝色背景*/
+  -ms-user-select: none; /*IE10*/ /*选中文字时避免出现蓝色背景*/
+  user-select: none; /*选中文字时避免出现蓝色背景*/
 }
 .table_header-column {
   overflow: hidden;
