--- a/src/assets/scss/variable/page.scss
+++ b/src/assets/scss/variable/page.scss
@@ -14,6 +14,9 @@ $page: (
     color: #afafaf,
     backColor: #ffffff,
   ),
+  pageTitle: (
+    borderColor: #B8BCC1
+  )
 );
 
 @function getPageValue($modules, $key) {
