一部分内容

--- a/src/assets/scss/mixin/page_list.scss
+++ b/src/assets/scss/mixin/page_list.scss
@@ -2,6 +2,8 @@
   text-align: left;
   vertical-align: inherit;
   padding: 5px;
+  white-space: pre-line;
+  outline: none;
 }
 
 @mixin subTitle($fontSize, $fontColor: null) {
