修改组件内容,创建多路由同视口文件文件

--- a/src/components/utils/tree/tree.scss
+++ b/src/components/utils/tree/tree.scss
@@ -21,6 +21,7 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+      height: 24px;
       .tree-node_icon {
         cursor: pointer;
         color: #c0c4cc;
