--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -1,6 +1,33 @@
 .page {
   overflow-x: hidden;
-  @include marginSet(0 10px 0 10px);
+
+  @media screen and (min-width: 768px) {
+    width: 750px;
+  }
+
+  @media screen and (min-width: 992px) {
+    width: 970px;
+  }
+
+  @media screen and (min-width: 1300px) {
+    width: 1170px;
+  }
+
+  @media screen and (min-width: 1500px) {
+    width: 1470px;
+  }
+
+  @media screen and (min-width: 1800px) {
+    width: 1770px;
+  }
+
+  @media screen and (min-width: 2000px) {
+    width: 1870px;
+  }
+
+
+  @include marginSet(auto);
+
   .no-page-data {
     padding: 20px;
     vertical-align: middle;
@@ -8,12 +35,14 @@
     font-size: 21px;
     color: #a3a3a3;
   }
+
   .title {
     h1 {
       color: getPageValue('utils', 'titleColor');
       font-weight: bolder;
     }
   }
+
   .font_emphasize {
     font-weight: bolder;
     color: getPageValue('utils', 'fontEmphasize');
@@ -29,11 +58,13 @@
     text-indent: getPageValue('code', 'textIndent');
     border: 1px solid #f8f8f8;
     @include overflow('x');
+
     .code_font {
       font-weight: bolder;
       font-size: 16px;
       // text-indent: 5px;
     }
+
     .note {
       color: getPageValue('utils', 'noteColor');
       // text-indent: 5px;
@@ -53,6 +84,7 @@
     @include paddingSet(10px);
     text-align: left;
     @include marginSet(0 10px 0 10px);
+
     span {
       @include paddingSet(0 0 0 10px);
     }
@@ -81,24 +113,30 @@
     font-weight: 800;
     font-size: 16px;
     text-align: left;
+
     li {
       margin-top: 10px;
     }
+
     .label_title {
       text-indent: 0;
     }
+
     .label_body {
       font-weight: normal;
       font-size: 14px;
+
       p {
         text-indent: 0px;
       }
     }
   }
+
   .page-title {
     border-bottom: 2px solid getPageValue('pageTitle', 'borderColor');
     @include pageTitle();
   }
+
   .page-title-no-line {
     @include pageTitle();
   }
