--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -1,5 +1,8 @@
 .page {
   overflow-x: hidden;
+  @media screen and(max-width: 768px) {
+    margin: 5px 10px;
+  }
 
   @media screen and (min-width: 768px) {
     width: 750px;
@@ -73,6 +76,9 @@
 
   .paragraph {
     text-align: left;
+    p {
+      text-indent: 32px;
+    }
   }
 
   .summary {
