--- a/src/assets/scss/mixin/page.scss
+++ b/src/assets/scss/mixin/page.scss
@@ -1,5 +1,6 @@
 @mixin titleList($left: 10px) {
     position: fixed;
+    width: 240px;
     left: $left;
     padding: 10px;
     margin-top: 30px;
