支持js代码的高亮

--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -68,6 +68,8 @@
       // text-indent: 5px;
     }
 
+    @import "./js_highlight.scss";
+
     .note {
       color: getPageValue('utils', 'noteColor');
       // text-indent: 5px;
