--- a/src/assets/scss/page/special_char.scss
+++ b/src/assets/scss/page/special_char.scss
@@ -1,8 +1,8 @@
 .highlight_char {
   background-color: red;
   color: #ffffff;
-  font-weight: 600;
-  padding: 3px;
+  font-weight: 400;
+  padding: 0 3px;
   border-radius: 3px;
 }
 
@@ -25,10 +25,10 @@
 }
 
 .inlineCode_char {
-    background-color: #E3E4E4;
-    color: #8e8f8f;
-    font-weight: 600;
-    padding: 5px;
+    background-color: rgb(243, 244, 244);
+    color: rgb(70, 70, 70);
+    font-weight: 400;
+    padding: 0 5px;
     border-radius: 5px;
-    border: 1px solid #f8f8f8;
+    border: 1px solid rgb(232, 233, 237);
 }
