--- a/src/assets/scss/page/page.scss
+++ b/src/assets/scss/page/page.scss
@@ -85,33 +85,8 @@
     }
   }
 
-  .summary {
-    color: getPageValue('summary', 'color');
-    border-left: 3px solid #dfe2e5;
-    background-color: getPageValue('summary', 'backColor');
-    font-size: 16px;
-    font-weight: bolder;
-    @include paddingSet(10px);
-    text-align: left;
-    @include marginSet(0 10px 0 10px);
-
-    span {
-      @include paddingSet(0 0 0 10px);
-    }
-
-    .code {
-      background-color: getPageValue('code', 'backColor');
-      @include paddingSet(10px);
-      color: getPageValue('code', 'color');
-      border-radius: 15px;
-      text-align: left;
-      text-indent: getPageValue('code', 'textIndent');
-      border: 1px solid #f8f8f8;
-      @include marginSet(0);
-      width: 100%;
-    }
-  }
-
+  @import "./summary.scss";
+  
   a {
     color: getPageValue('utils', 'hrefColor');
     font-weight: 500;
