--- a/src/views/test/show.html
+++ b/src/views/test/show.html
@@ -1,111 +1,67 @@
-<div class="tree-list">
-    <div class="tree-node">
-        <div style="padding-left: 0px" class="tree-node-content" id="treeNode0">
-            <span class="tree-node_icon  el-icon-caret-right"></span>
-            <span class="tree-nodel_label">1. 代码构建</span>
-        </div>
-        <div class="tree-node-content_children">
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode1">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">1.1 测试 `table`</span>
-                </div>
-
-                <div class="tree-node-content_children">
-                    <div class="tree-node">
-                        <div style="padding-left: 36px" class="tree-node-content" id="treeNode2">
-                            <span class="tree-node_icon  el-icon-caret-right"></span>
-                            <span class="tree-nodel_label">1.1.1 测试==特殊字符==匹配</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode3">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">1.2 测试2级标题2</span>
-                </div>
-
-                <div class="tree-node-content_children">
-                    <div class="tree-node">
-                        <div style="padding-left: 36px" class="tree-node-content" id="treeNode4">
-                            <span class="tree-node_icon  el-icon-caret-right"></span>
-                            <span class="tree-nodel_label">1.2.1 测试3级标题1</span>
-                        </div>
-                        <div class="tree-node-content_children">
-                            <div class="tree-node">
-                                <div style="padding-left: 54px" class="tree-node-content" id="treeNode5">
-                                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                                    <span class="tree-nodel_label">1.2.1.1 测试4级标题1</span>
-                                </div>
-                                <div class="tree-node-content_children">
-                                    <div class="tree-node">
-                                        <div style="padding-left: 90px" class="tree-node-content" id="treeNode6">
-                                            <span class="tree-node_icon  el-icon-caret-right"></span>
-                                            <span class="tree-nodel_label">1.2.1.1.1.1 测试6级标题1</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode7">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">1.3 测试2级标题3</span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="tree-node">
-        <div style="padding-left: 0px" class="tree-node-content" id="treeNode8">
-            <span class="tree-node_icon  el-icon-caret-right"></span>
-            <span class="tree-nodel_label">2. 匹配内容的记录</span>
-        </div>
-        <div class="tree-node-content_children">
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode9">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">2.1 特殊字符匹配</span>
-                </div>
-            </div>
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode10">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">2.2 表格匹配</span>
-                </div>
-            </div>
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode11">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">2.3 代码匹配（含普通注释及多行注释匹配）</span>
-                </div>
-            </div>
-            <div class="tree-node">
-                <div style="padding-left: 18px" class="tree-node-content" id="treeNode12">
-                    <span class="tree-node_icon  el-icon-caret-right"></span>
-                    <span class="tree-nodel_label">2.4 标题匹配</span>
-                </div>
-                <div class="tree-node-content_children">
-                    <div class="tree-node">
-                        <div style="padding-left: 36px" class="tree-node-content" id="treeNode13">
-                            <span class="tree-node_icon  el-icon-caret-right"></span>
-                            <span class="tree-nodel_label">2.4.1 普通标题匹配</span>
-                        </div>
-                    </div>
-                    <div class="tree-node">
-                        <div style="padding-left: 36px" class="tree-node-content" id="treeNode14">
-                            <span class="tree-node_icon  el-icon-caret-right"></span>
-                            <span class="tree-nodel_label">2.4.2 多级标题的构建</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="paragraph">
+    <p></p>
+    <p> 测试Summary模块以及集成其他模块的用例</p>
+    <p> <span class='inlineCode_char'>`</span></p>
+    <p> var JsHighLight = function () {</p>
+    <p> /**</p>
+    <p> * @property {Array} expression 表达式</p>
+    <p> */</p>
+    <p> this.expression = [</p>
+    <p> 'let', 'var', 'this', 'class', 'function', 'const', 'import', 'export', 'delete', 'new', 'for', 'while',
+        'switch',</p>
+    <p> 'case', 'break', 'continue', 'default', 'async', 'await', 'return', 'typeof', 'do', 'if',</p>
+    <p> 'else if', 'else', 'import', 'super', 'try', 'catch', 'yield', 'throw', 'debugger', 'from', 'in', 'of'</p>
+    <p> ];</p>
+    <p> this.char = /(\<span class='inlineCode_char'>.<font class='tilt_char'>\</span>|\'.</font>\'|\".<font
+            class='tilt_char'>\"|\=|\+|\!|\?|\</font>|\||\/|\>|\<|\-|\&|\^|\@)/gi </p> <p>> this.value = /(?
+            <=(let|var|class|function|const|import))(\s+)(.+?)(?=(\s|;)+)/g </p> <p>> }</p>
+    <p>> </p>
+    <p>> JsHighLight.prototype.matchExpress = function (data) {</p>
+    <p>> for(let value of this.expression){</p>
+    <p>> let reg = new RegExp(eval(<span class='inlineCode_char'>/(${value})(\\s|:|\\.){1}/</span>), 'g');</p>
+    <p>> if(reg.test(data)){</p>
+    <p>> data = data.replace(reg, '<font class="expression">$1</font>$2');</p>
+    <p>> }</p>
+    <p>> }</p>
+    <p>> </p>
+    <p>> return data;</p>
+    <p>> }</p>
+    <p>> </p>
+    <p>> JsHighLight.prototype.matchChar = function(data){</p>
+    <p>> if(this.char.test(data)){</p>
+    <p>> data = data.replace(this.char, '<font class="char">$1</font>')</p>
+    <p>> }</p>
+    <p>> return data;</p>
+    <p>> }</p>
+    <p>> </p>
+    <p>> JsHighLight.prototype.matchValue = function(data){</p>
+    <p>> if(this.value.test(data)){</p>
+    <p>> data = data.replace(this.value, '$2<font class="value">$3</font>')</p>
+    <p>> }</p>
+    <p>> </p>
+    <p>> return data;</p>
+    <p>> }</p>
+    <p>> </p>
+    <p>> JsHighLight.prototype.handleHighLight = function(data){</p>
+    <p>> let handleData = this.matchChar(data);</p>
+    <p>> handleData = this.matchValue(handleData);</p>
+    <p>> handleData = this.matchExpress(handleData);</p>
+    <p>> console.log(handleData);</p>
+    <p>> return handleData;</p>
+    <p>> }</p>
+    <p>> </p>
+    <p>> export default JsHighLight;</p>
+    <p>> <span class='inlineCode_char'>`</span></p>
+    <p>></p>
+    <p>> 也许这就是命运的选择</p>
+    <p></p>
+    <p>1. summmary 匹配的几个特殊的点</p>
+    <p> 1. summary中是可以匹配code代码模块的，所以我们需要在每一次匹配的时候去匹配是否存在<span
+            class='inlineCode_char'>`</span>这个情况，也就是在普通匹配的时候匹配到code的时候的情况，还要放入到summary中来的。<font class='tilt_char'>
+            注意，code模块中间是绝对不可以断掉的(<font class='highlight_char'>指的是Summary模块的连贯性！</font>)，如果断掉了，就不能再变成code模块了，而是变成了普通的字符了！
+        </font>
+    </p>
+    <p> 2. 同上，也可以分别匹配Title模块和Table模块和OrderList模块，但是匹配Title模块有一个很特殊的点，其内的title模块是不能生成在Title索引中的，只是返回其中的样式</p>
+    <p> 3. 多个summary连在一起时，就可以组成一个大的summary模块，就像上面的表现形式是一样的</p>
+    <p> 4. 根据以上的点进行代码的编写</p>
 </div>
