--- a/src/assets/scss/page/summary.scss
+++ b/src/assets/scss/page/summary.scss
@@ -23,6 +23,8 @@
     @include marginSet(0);
     width: 100%;
     .code_font {
+      white-space: nowrap;
+      word-break: break-all;
       font-weight: bolder;
       font-size: 16px;
       // text-indent: 5px;
@@ -31,6 +33,8 @@
     @import './js_highlight.scss';
 
     .note {
+      white-space: nowrap;
+      word-break: break-all;
       color: getPageValue('utils', 'noteColor');
       // text-indent: 5px;
     }
